[iOS] Always run WKTR's WKWebViews at foreground priority https://bugs.webkit.org/show_bug.cgi?id=210991

Reviewed by Keith Miller.

Always run WKTR's WKWebViews at foreground priority. This makes sure that they don't suspend and
run at foreground priority on iOS, even if those views are not visible on screen.
This is an issue to address flakiness on the bots.

* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::initializeWebViewConfiguration):


Canonical link: https://commits.webkit.org/223882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260675 268f45cc-cd09-0410-ab3c-d52691b4dbfc